--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,4 @@ framework = arduino
 
 upload_port = /dev/ttyUSB*
 monitor_speed = 115200
-lib_deps = fastled/FastLED @ ^3.4.0
+; lib_deps = fastled/FastLED @ ^3.4.0
